WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221833
<img> isn't able to render RTL text correctly in ALT text
https://bugs.webkit.org/show_bug.cgi?id=221833
Summary
<img> isn't able to render RTL text correctly in ALT text
Ebrahim Byagowi
Reported
2021-02-12 11:28:35 PST
Open data:text/html;charset=utf-8,The following two lines should have exact same text,<br>یاexampleیا<br><img alt="یاexampleیا" src="about:blank" width=200 height=200> Compare the two lines with other browser. Actual: RTL text is rendered incorrectly thus the two lines differs Expected: They should be same, just like the other browsers. Actually I've filed this in 2013 in Chromium
https://crbug.com/326921
and now am seeing it again in Safari. That file contains three patches and it turned out the fix for this is just to use drawBidiText instead drawText which I submit a patch with it also.
Attachments
PATCH
(1.60 KB, patch)
2021-02-12 11:36 PST
,
Ebrahim Byagowi
no flags
Details
Formatted Diff
Diff
Patch
(4.64 KB, patch)
2021-03-09 00:10 PST
,
Myles C. Maxfield
zalan
: review+
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch for committing
(7.80 KB, patch)
2021-03-15 23:34 PDT
,
Myles C. Maxfield
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch for committing
(7.80 KB, patch)
2021-03-16 12:11 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch for committing
(7.86 KB, patch)
2021-03-16 14:10 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch for committing
(7.88 KB, patch)
2021-03-16 14:19 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch for committing
(7.93 KB, patch)
2021-03-16 14:29 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
Ebrahim Byagowi
Comment 1
2021-02-12 11:36:31 PST
Created
attachment 420156
[details]
PATCH This fixes the issue in a local run with minibrowser but I know a LayoutTest would be needed for it eventually.
Radar WebKit Bug Importer
Comment 2
2021-02-19 11:29:13 PST
<
rdar://problem/74530491
>
Myles C. Maxfield
Comment 3
2021-03-09 00:10:36 PST
Created
attachment 422671
[details]
Patch
Myles C. Maxfield
Comment 4
2021-03-15 23:34:44 PDT
Created
attachment 423305
[details]
Patch for committing
Myles C. Maxfield
Comment 5
2021-03-16 12:11:28 PDT
Created
attachment 423377
[details]
Patch for committing
Myles C. Maxfield
Comment 6
2021-03-16 14:10:00 PDT
Created
attachment 423398
[details]
Patch for committing
Myles C. Maxfield
Comment 7
2021-03-16 14:19:58 PDT
Created
attachment 423399
[details]
Patch for committing
Myles C. Maxfield
Comment 8
2021-03-16 14:29:00 PDT
Created
attachment 423400
[details]
Patch for committing
Myles C. Maxfield
Comment 9
2021-03-16 16:40:00 PDT
Committed
r274532
(
235383@main
): <
https://commits.webkit.org/235383@main
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug