<img> isn't able to render RTL text correctly in ALT text https://bugs.webkit.org/show_bug.cgi?id=221833 <rdar://problem/74530491>

Reviewed by Zalan Bujtas.

Source/WebCore:

Simply use the text drawing routine that handles bidi.

Test: fast/text/image-alt-text-bidi.html

* rendering/RenderImage.cpp:
(WebCore::RenderImage::paintReplaced):

LayoutTests:

* platform/ios/TestExpectations:
* platform/mac/TestExpectations:
* fast/text/image-alt-text-bidi-2-expected.html: Added.
* fast/text/image-alt-text-bidi-2.html: Added.
* fast/text/image-alt-text-bidi-expected.html: Added.
* fast/text/image-alt-text-bidi.html: Added.

Canonical link: https://commits.webkit.org/235383@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274532 268f45cc-cd09-0410-ab3c-d52691b4dbfc